Fix collapsed NavigationBar toggle alignment (#642)
* Fix collapsed NavigationBar toggle alignment

* Scope NavigationBar toggle auto margin

--- a/packages/components/src/components/navigation-bar/navigation-bar.css
+++ b/packages/components/src/components/navigation-bar/navigation-bar.css
@@ -133,6 +133,11 @@
       display: inline-flex;
     }
 
+    .cinder-navigation-bar[data-collapsible='true'][data-cinder-menu-toggle-placement='after-brand']
+      .cinder-navigation-bar__menu-toggle {
+      margin-inline-start: auto;
+    }
+
     .cinder-navigation-bar[data-collapsible='true'] .cinder-navigation-bar__items {
       position: absolute;
       inset-inline: 0;
